--- a/app/tpls/home/main/demand2/useCaseScenarioUsecase.html
+++ b/app/tpls/home/main/demand2/useCaseScenarioUsecase.html
@@ -1,27 +1,23 @@
 <style type="text/css">
-
 </style>
 <div class="projectBodyBox">
-	<div class="projectBodyTitle flexRow">
-		<div class="floatleft flexRow flex">需求名字</div>
-		<div class="floatleft personalNav">
+	<div class="projectBodyTitle " style="text-align: center;">
+		<div class="floatleft ">需求名字2</div>
+		<div class=" personalNav" style="display: inline-block;">
 			<ul>
-				<li ui-sref="index.demand.demandDetails">
+				<li ui-sref="index.demand2">
 					<a class="cursor_p">需求内容</a>
 				</li>
 				<li class="current">
-					<a class="cursor_p">用例设计</a>
+					<a class="cursor_p">用例场景</a>
 				</li>
-				<li ui-sref="index.demand.usecaseHistory">
+				<li ui-sref="index.demand2.usecaseHistory">
 					<a class="cursor_p">需求历史</a>
 				</li>
 				<div class="clear"></div>
 			</ul>
 			<div class="clear"></div>
-		</div>
-		<div class="floatright flex">
-			<input type="button" class="floatright btndefault btndefault_blue" name="" id="" value="返回" ui-sref="index.demand" />
-		</div>
+		</div>		
 	</div>
 	<div class="projectBodyContent">
 		<div class="projectBodyBox" ng-controller="demandCtrl">
@@ -29,7 +25,7 @@
 				<div class="floatleft flexRow flex"></div>
 				<div class="floatleft personalNav">
 					<ul>
-						<li ui-sref="index.demand.usecaseScenario">
+						<li ui-sref="index.demand2.usecaseScenario">
 							<a href="" class="cursor_p">功能点</a>
 						</li>
 						<li class="current">
