--- a/app/tpls/home/main/demand2/usecaseHistory.html
+++ b/app/tpls/home/main/demand2/usecaseHistory.html
@@ -1,15 +1,15 @@
 <style type="text/css">
 </style>
 <div class="projectBodyBox" ng-controller="demandCtrl">
-    <div class="projectBodyTitle flexRow">
-        <div class="floatleft flexRow flex">需求历史</div>
-        <div class="floatleft personalNav">
+    <div class="projectBodyTitle" style="text-align: center;">
+        <div class="floatleft ">需求历史2</div>
+        <div class="personalNav" style="display: inline-block;">
             <ul>
-                <li ui-sref="index.demand.demandDetails">
+                <li ui-sref="index.demand2">
                     <a href="" class="cursor_p">需求内容</a>
                 </li>
-                <li ui-sref="index.demand.usecaseScenario">
-                    <a href="" class="cursor_p">用例设计</a>
+                <li ui-sref="index.demand2.usecaseScenario">
+                    <a href="" class="cursor_p">用例场景</a>
                 </li>
                 <li class="current">
                     <a href="" class="cursor_p">需求历史</a>
@@ -17,10 +17,7 @@
                 <div class="clear"></div>
             </ul>
             <div class="clear"></div>
-        </div>
-        <div class="floatright flex">
-            <input type="button" class="floatright btndefault btndefault_blue" name="" id="" value="返回" ui-sref="index.demand" />
-        </div>
+        </div>       
     </div>
     <div class="projectBodyContent">
         <div class="userCaseListTable">
