--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -2,33 +2,23 @@
 </style>
 <div class="projectBodyBox" ng-controller="testSetCtrl">
     <div class="projectBodyTitle">
-        测试集管理
+        测试集名称
     </div>
-    <!-- <div class="useCaseListfunc clearfix">
-        <div class="dropdownDefault floatleft" dropdown>
-            <div dropdown-toggle class="dropdowntoggle">
-                <span class="dropdowntoggletext">需求状态</span>
-                <i class="iconfont icon-unfold"></i>
-            </div>
-            <ul class="dropdown-menu transition" dropdown-menu role="menu">
-                <span class="triangle"></span>
-                <li><i class="iconfont icon-addpeople_fill"></i><span>待处理</span></li>
-                <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
-            </ul>
-        </div>
-    </div> -->
     <div class="projectBodyContent" style="top: 56px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
                 <span class="chatIconButton">
-                    <i class="iconfont icon-guanlian"></i>复制
+                    <i class="iconfont icon-guanlian"></i>发起执行
                 </span>                
                 <span class="chatIconButton">
-                    <i class="iconfont icon-brush_fill"></i>剪切
+                    <i class="iconfont icon-add"></i>新增用例
                 </span>
                 <span class="chatIconButton">
-                    <i class="iconfont icon-import"></i>粘贴
+                    <i class="iconfont icon-guanlihoutai23"></i>上移
+                </span>
+                <span class="chatIconButton">
+                    <i class="iconfont icon-guanlihoutai23-copy"></i>下移
                 </span>
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
