--- a/app/tpls/modal/createCompenent.html
+++ b/app/tpls/modal/createCompenent.html
@@ -13,11 +13,11 @@
         </li>       
         <div class="clear"></div>
         <li>
-            <h1>运行环境：</h1>
+            <h1>类型：</h1>
             <select class="selectNormal selectNormal_480">
-                <option>项目经理</option>
-                <option>测试</option>
-                <option>开发</option>
+                <option>111111</option>
+                <option>222222</option>
+                <option>333333</option>
             </select>
         </li>                      
         <li>
