--- a/app/tpls/modal/editFilter.html
+++ b/app/tpls/modal/editFilter.html
@@ -1,7 +1,7 @@
 <style type="text/css">
 </style>
 <div class="modal-header">
-    <h3>添加/编辑过滤器
+    <h3>添加过滤器
     <i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
     </h3>
 </div>
