--- a/app/tpls/modal/import.html
+++ b/app/tpls/modal/import.html
@@ -18,8 +18,12 @@
         
         <li>
         	<h1> &nbsp;</h1>
-        	<span style="font-size: 14px;color: #313131;">需求导入模板.xlsx</span>  <a href="" style="font-size: 14px;color:#3462fe;">下载</a>
+        	<span style="font-size: 14px;color: #313131;">需求导入word模板.docx</span>  <a href="" style="font-size: 14px;color:#3462fe;">下载</a>
         </li>      
+        <li>
+        	<h1> &nbsp;</h1>
+        	<span style="font-size: 14px;color: #313131;">需求导入excel模板.xlsx</span>  <a href="" style="font-size: 14px;color:#3462fe;">下载</a>
+        </li>  
     </ul>
 </div>
 <div class="modal-footer">   
