--- a/app/tpls/modal/createTaskTestset.html
+++ b/app/tpls/modal/createTaskTestset.html
@@ -2,7 +2,7 @@
 </style>
 <div class="modal-content">
 	<div class="modal-header">
-		<h3>选择测试集
+		<h3>选择目录
 		<i class="floatright iconfont icon-close modalCloseIcon" ng-click="cancel()"></i>
 		</h3>
 	</div>
