--- a/app/tpls/home/leftnav/projectNavCase.html
+++ b/app/tpls/home/leftnav/projectNavCase.html
@@ -148,35 +148,10 @@
         <div class="leftNavList useCaseTree" ng-show="navTabPanel==1">
             <div class="title">
                 用例树              
-                <span class="chatIconButton floatright treefunicon" data-tip="删除节点">
-                    <i class="iconfont icon-empty"></i>
+                <span class="chatIconButton floatright treefunicon" data-tip="刷新">
+                    <i class="iconfont icon-gengxin" style="font-size:14px;"></i>
                 </span>
-                <div class="dropdownDefault floatright treefunicon" dropdown>
-                    <span class="chatIconButton floatright" data-tip="移动节点" dropdown-toggle>
-                        <i class="iconfont icon-yidong" style="font-size: 15px;"></i>
-                    </span>
-                    <ul class="dropdown-menu transition" dropdown-menu role="menu">
-                        <span class="triangle"></span>
-                        <li><i class="iconfont icon-guanlihoutai23"></i><span>上移</span></li>
-	                    <li><i class="iconfont icon-guanlihoutai23-copy"></i><span>下移</span></li>
-	                    <li><i class="iconfont icon-zuoyi1" style="font-size: 16px;"></i><span>左移</span></li>
-	                    <li><i class="iconfont icon-youyi1" style="font-size: 16px;"></i><span>右移</span></li>
-                    </ul>
-                </div>
-                <span class="chatIconButton floatright treefunicon" data-tip="编辑节点">
-                    <i class="iconfont icon-editor"></i>
-                </span>
-                <div class="dropdownDefault floatright treefunicon" dropdown>
-                    <span class="chatIconButton floatright" data-tip="编辑节点" dropdown-toggle>
-                        <i class="iconfont icon-add"></i>
-                    </span>
-                    <ul class="dropdown-menu transition" dropdown-menu role="menu">
-                        <span class="triangle"></span>
-                        <li><i class="iconfont icon-tianjia1"></i><span>新增子节点</span></li>
-                    	<li><i class="iconfont icon-449xianxingtianjiatongji" style="font-size: 16px;"></i><span>新增同级节点</span></li>
-                    </ul>
-                </div>
-                
+                                                            
             </div>
             <div class="treeBody">
                 <div>
